<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 Adrian Miozga <AdrianMiozga@outlook.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Timer Durations">

        <SeekBarPreference
            app:defaultValue="25"
            app:iconSpaceReserved="false"
            app:key="work_duration_setting"
            app:min="1"
            android:max="60"
            app:showSeekBarValue="true"
            app:title="@string/work_duration_title" />

        <SeekBarPreference
            app:defaultValue="5"
            app:iconSpaceReserved="false"
            app:key="break_duration_setting"
            app:min="1"
            android:max="30"
            app:showSeekBarValue="true"
            app:title="@string/break_duration_title" />

        <SeekBarPreference
            app:defaultValue="20"
            app:iconSpaceReserved="false"
            app:key="long_break_duration_setting"
            app:min="1"
            android:max="60"
            app:showSeekBarValue="true"
            app:title="@string/long_break_duration_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="General Settings">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="keep_screen_on"
            app:singleLineTitle="false"
            app:title="@string/keep_screen_on" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="full_screen_mode"
            app:singleLineTitle="false"
            app:title="@string/full_screen_mode_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="automatically_start_activities"
            app:singleLineTitle="false"
            app:summary="@string/automatically_start_activities_summary"
            app:title="@string/automatically_start_new_activities" />

    </PreferenceCategory>

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:key="scroll_pie_chart_automatically"
        app:singleLineTitle="false"
        app:summary="@string/scroll_pie_chart_automatically_summary"
        app:title="@string/scroll_pie_chart_automatically_title" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="application_lock_preference"
        app:title="@string/app_lock" />

</PreferenceScreen>